Correction finale: valeurs par défaut DATABASE_URI et Jenkinsfile complet

--- a/cast-service/Dockerfile
+++ b/cast-service/Dockerfile
@@ -2,6 +2,9 @@ FROM python:3.8-slim
 
 WORKDIR /app
 
+# Définir la variable d'environnement par défaut
+ENV DATABASE_URI="sqlite:///:memory:"
+
 COPY ./requirements.txt /app/requirements.txt
 
 RUN apt-get update \
@@ -13,5 +16,4 @@ RUN pip install -r /app/requirements.txt \
 
 COPY . /app/
 
-# Utiliser --loop asyncio pour éviter les problèmes avec uvloop
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--loop", "asyncio"]
