--- a/movie-service/Dockerfile
+++ b/movie-service/Dockerfile
@@ -2,6 +2,10 @@ FROM python:3.8-slim
 
 WORKDIR /app
 
+# Définir les variables d'environnement par défaut
+ENV DATABASE_URI="sqlite:///:memory:"
+ENV CAST_SERVICE_HOST_URL="http://localhost:8000/api/v1/casts/"
+
 COPY ./requirements.txt /app/requirements.txt
 
 RUN apt-get update \
@@ -13,5 +17,4 @@ RUN pip install -r /app/requirements.txt \
 
 COPY . /app/
 
-# Utiliser --loop asyncio pour éviter les problèmes avec uvloop
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--loop", "asyncio"]
