--- a/cast-service/requirements.txt
+++ b/cast-service/requirements.txt
@@ -1,5 +1,6 @@
 asyncpg==0.20.1
-databases[postgresql]==0.2.6
+aiosqlite==0.19.0
+databases[postgresql,sqlite]==0.2.6
 fastapi==0.48.0
 SQLAlchemy==1.3.13
 uvicorn[standard]==0.11.2
